# LexAnaGen

./: CMakeLists.txt  README.md  高一化学开学考.docx
include/: Data.h  GDFA.h  GLexA.h  GNFA.h  config.h
src/: Data.cpp  GDFA.cpp  GLexA.cpp  GNFA.cpp  main.cpp
static/: RE.txt  RE_test.txt
